fix: edgee-component.toml

--- a/edgee-component.toml
+++ b/edgee-component.toml
@@ -4,7 +4,7 @@ manifest-version = 1
 name = "Meta Signals Gateway"
 version = "1.0.0"
 category = "data-collection"
-subcategory = "server-side"
+subcategory = "server-side-tagging"
 description = """
 Meta Signals Gateway is an enterprise-grade solution that securely connects your internal data with Meta's advertising ecosystem. It enables marketing teams to:
 
@@ -14,6 +14,8 @@ Meta Signals Gateway is an enterprise-grade solution that securely connects your
 - Reduce operational overhead and resource requirements
 
 Edgee provides a fully managed Signals Gateway instance, seamlessly integrated with your Edgee project, making it effortless to leverage Meta's advanced advertising capabilities.
+
+Read the official [Meta Signals Gateway presentation page](https://www.facebook.com/business/m/signalsgateway/#) and the [Meta Signals Gateway documentation](https://developers.facebook.com/docs/marketing-api/gateway-products/signals-gateway) for more information.
 """
 documentation = "https://www.edgee.cloud/docs/components/data-collection/meta-signals-gateway"
 repository = "https://github.com/edgee-cloud/meta-signals-gateway-component"
@@ -43,7 +45,7 @@ title = "Data Collection Method"
 type = "string"
 options = ["edge", "js"]
 required = true
-description = "Select how you want to collect data for this component. With 'Edge' mode, Edgee handles data collection and event forwarding to Signals Gateway automatically. With 'JS' mode, you'll need to integrate the Meta Pixel SDK directly on your website to collect and send events."
+description = "Select how you want to collect data for this component. With 'Edge component' mode, Edgee handles data collection and event forwarding to Signals Gateway automatically. With 'Javascript SDK' mode, you'll need to integrate the Meta Pixel SDK directly on your website to collect and send events."
 
 [component.settings.path_prefix]
 title = "Path Prefix"
@@ -51,9 +53,15 @@ type = "string"
 required = true
 description = "When using JS data collection, specify a custom path prefix for the Meta Pixel. This helps prevent ad blockers from detecting and blocking the pixel. You can change this value at any time to maintain effectiveness."
 
-
 [component.settings.inject_sdk]
 title = "Automatic Meta Pixel Injection"
 type = "bool"
 required = true
-description = "When enabled, the Meta Pixel will be automatically added to your website. If disabled, you'll need to add the Meta Pixel code to your website manually. This setting only applies when using the 'JS' data collection method."
+description = "When enabled, the Meta Pixel will be automatically added to your website. If disabled, you'll need to add the Meta Pixel code to your website manually and handle its initialization based on user consent. This setting only applies when using the 'JS' data collection method."
+
+[component.settings.mode]
+title = "Mode"
+type = "string"
+options = ["safe", "strong", "always"]
+required = true
+description = "The mode determines when the Meta Pixel is injected based on the user's consent."
